# game-engine-high-school-project

./: CMakeLists.txt  README.md  ecs.puml  ecs2.puml  install-packages  run
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
resources/shaders/: default.frag  default.vert  light.frag  light.vert  toon.frag  toon.vert
src/: Core.cpp  Core.h  Engine.h  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  Graphics.cpp  Graphics.h  Logic.cpp  Logic.h  PlayerComponent.h  PlayerSystem.cpp  PlayerSystem.h  ScreenMenu.cpp  ScreenMenu.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  TransformComponent.h  main.cpp
src/engine/: Actions.cpp  Actions.h  Color.cpp  Color.h  Core.cpp  Core.h  Graphics.cpp  Graphics.h  HelperFunctions.cpp  HelperFunctions.h  Keyboard.cpp  Keyboard.h  Logic.cpp  Logic.h  Mesh.cpp  Mesh.h  Mouse.cpp  Mouse.h  Noise.cpp  Noise.h  RenderTarget.cpp  RenderTarget.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteFont.cpp  SpriteFont.h  Texture.cpp  Texture.h  TextureManager.h  TextureManger.cpp
src/engine/ecs/: Component.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  System.h  World.cpp  World.h
